# working-with-desi

./: .gitignore  README.md  desi_spectra_visualization.ipynb  pyproject.toml
examples/: desi_spectra_visualization.ipynb  spec-0399-51817-0207.fits
src/: __init__.py  get_spec.py  main.py  spectrum_io.py  utils.py
